@startuml

title __CELLULAR's Class Diagram__\n

  namespace cellular {
    class cellular.GridDisplay {
        - scale : int
        + GridDisplay()
        + display()
    }
  }
  

  namespace cellular {
    abstract class cellular.GridGeneration {
        + GridGeneration()
        + GridGeneration()
        + GridGeneration()
        {abstract} + clone()
        + get()
        + getHeight()
        + getNeighbors()
        + getWidth()
        + getWithPoint()
        + nbAgents()
        + set()
        + set()
        + setWithPoint()
    }
  }
  

  namespace cellular {
    interface cellular.ICellType {
        {abstract} + getColor()
    }
  }
  

  namespace cellular {
    interface cellular.IGridGeneration {
        {abstract} + getHeight()
        {abstract} + getNeighbors()
        {abstract} + getWidth()
        {abstract} + getWithPoint()
        {abstract} + setWithPoint()
    }
  }
  

  namespace cellular {
    interface cellular.IGridRule {
    }
  }
  

  cellular.GridDisplay .up.|> agentsystem.IDisplay
  cellular.GridDisplay o-- cellular.ICellType : cellType
  cellular.GridGeneration .up.|> cellular.IGridGeneration
  cellular.GridGeneration o-- util.Matrix : matrix


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
